--- a/apps/gallery/templates/gallery/trip.html
+++ b/apps/gallery/templates/gallery/trip.html
@@ -1,6 +1,6 @@
 Trip {{ trip.title }}
-{% if image_list %}
-    {% for image in image_list %}
+{% if images %}
+    {% for image in images %}
     <img style="width:200px" src="{{ image.src.url}}">
     {% endfor %}
 {% else %}
