--- a/apps/gallery/templates/gallery/category.html
+++ b/apps/gallery/templates/gallery/category.html
@@ -1,9 +1,11 @@
 {% extends 'gallery/main.html' %}
+{% block content_body %}
 Category {{ category.title }}
 {% if images %}
     {% for image in images %}
-    <img style="width:200px" src="{{ image.src.url}}">
+    <img style="width:10px" src="{{image.src.url}}">
     {% endfor %}
 {% else %}
     <p>No images are available.</p>
 {% endif %}
+{% endblock content_body %}
