--- a/agimpel_com/static/css/_content.scss
+++ b/agimpel_com/static/css/_content.scss
@@ -32,7 +32,7 @@
 // TITLE TEXT STYLING
 
 #title span {
-    font-family: "Lato", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+    font-family: 'Merriweather', serif;
     font-size: 40px;
     color: $text_title;
     text-align: center;
