--- a/agimpel_com/static/css/all.css
+++ b/agimpel_com/static/css/all.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Merriweather&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -13,8 +15,8 @@ html, body {
 a {
   text-decoration: none;
   color: inherit; }
-a:hover {
-  text-decoration: underline; }
+  a:hover {
+    text-decoration: underline; }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -98,14 +100,17 @@ abbr[title] {
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
-b, strong {
+b,
+strong {
   font-weight: bolder; }
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
  */
-code, kbd, samp {
+code,
+kbd,
+samp {
   font-family: monospace, monospace;
   /* 1 */
   font-size: 1em;
@@ -121,7 +126,8 @@ small {
  * Prevent `sub` and `sup` elements from affecting the line height in
  * all browsers.
  */
-sub, sup {
+sub,
+sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -147,7 +153,11 @@ img {
  * 1. Change the font styles in all browsers.
  * 2. Remove the margin in Firefox and Safari.
  */
-button, input, optgroup, select, textarea {
+button,
+input,
+optgroup,
+select,
+textarea {
   font-family: inherit;
   /* 1 */
   font-size: 100%;
@@ -161,7 +171,8 @@ button, input, optgroup, select, textarea {
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
  */
-button, input {
+button,
+input {
   /* 1 */
   overflow: visible; }
 
@@ -169,27 +180,37 @@ button, input {
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
  * 1. Remove the inheritance of text transform in Firefox.
  */
-button, select {
+button,
+select {
   /* 1 */
   text-transform: none; }
 
 /**
  * Correct the inability to style clickable types in iOS and Safari.
  */
-button, [type="button"], [type="reset"], [type="submit"] {
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button; }
 
 /**
  * Remove the inner border and padding in Firefox.
  */
-button::-moz-focus-inner, [type="button"]::-moz-focus-inner, [type="reset"]::-moz-focus-inner, [type="submit"]::-moz-focus-inner {
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
   border-style: none;
   padding: 0; }
 
 /**
  * Restore the focus styles unset by the previous rule.
  */
-button:-moz-focusring, [type="button"]:-moz-focusring, [type="reset"]:-moz-focusring, [type="submit"]:-moz-focusring {
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText; }
 
 /**
@@ -234,7 +255,8 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type="checkbox"], [type="radio"] {
+[type="checkbox"],
+[type="radio"] {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -243,7 +265,8 @@ textarea {
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type="number"]::-webkit-inner-spin-button, [type="number"]::-webkit-outer-spin-button {
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
   height: auto; }
 
 /**
@@ -436,7 +459,8 @@ template {
   display: none; }
 
 /* Fallback example for browsers that don't support 3D transforms (and no JS fallback) */
-.no-csstransforms3d .content-pusher, .no-js .content-pusher {
+.no-csstransforms3d .content-pusher,
+.no-js .content-pusher {
   padding-left: 300px; }
 
 #title {
@@ -448,18 +472,18 @@ template {
   margin: auto;
   margin-top: 2%;
   margin-bottom: 2%; }
-@media (min-width: 480px) {
-  #title {
-    max-width: 92.5%; } }
-@media (min-width: 768px) {
-  #title {
-    max-width: 90%; } }
-@media (min-width: 992px) {
-  #title {
-    max-width: 850px; } }
-@media (min-width: 1200px) {
-  #title {
-    max-width: 1050px; } }
+  @media (min-width: 480px) {
+    #title {
+      max-width: 92.5%; } }
+  @media (min-width: 768px) {
+    #title {
+      max-width: 90%; } }
+  @media (min-width: 992px) {
+    #title {
+      max-width: 850px; } }
+  @media (min-width: 1200px) {
+    #title {
+      max-width: 1050px; } }
 
 #main {
   width: 100%;
@@ -467,30 +491,30 @@ template {
   padding-left: 50px;
   max-width: 95%;
   margin: auto; }
-@media (min-width: 480px) {
-  #main {
-    max-width: 85%; } }
-@media (min-width: 768px) {
-  #main {
-    max-width: 80%; } }
-@media (min-width: 992px) {
-  #main {
-    max-width: 760px; } }
-@media (min-width: 1200px) {
-  #main {
-    max-width: 960px; } }
+  @media (min-width: 480px) {
+    #main {
+      max-width: 85%; } }
+  @media (min-width: 768px) {
+    #main {
+      max-width: 80%; } }
+  @media (min-width: 992px) {
+    #main {
+      max-width: 760px; } }
+  @media (min-width: 1200px) {
+    #main {
+      max-width: 960px; } }
 
 #title span {
-  font-family: "Lato", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+  font-family: 'Merriweather', serif;
   font-size: 40px;
   color: black;
   text-align: center;
   text-rendering: optimizeLegibility; }
-#title span.typing {
-  border-right: 0.08em solid black; }
-#title span.typing-end {
-  -webkit-animation: 1s blink step-end infinite;
-  animation: 1s blink step-end infinite; }
+  #title span.typing {
+    border-right: 0.08em solid black; }
+  #title span.typing-end {
+    -webkit-animation: 1s blink step-end infinite;
+    animation: 1s blink step-end infinite; }
 
 @keyframes "blink" {
   from, to {
