--- a/agimpel_com/static/css/all.scss
+++ b/agimpel_com/static/css/all.scss
@@ -8,6 +8,7 @@ $menu-width_closed: 50px; //width of sidenav in closed state
 $menu-width_difference: 250px;
 $navbar-height: 50px; //height of navbar in mobile design
 
+$footer-height: 60px;
 
 $content-1: rgba(45, 45, 45, 1);
 $content-2: rgba(229,107,46,1);
