--- a/agimpel_com/static/css/_content.scss
+++ b/agimpel_com/static/css/_content.scss
@@ -1,12 +1,11 @@
 #title {
     width: 100%;
-    height: 50px;
+    height: auto;
     text-align: left;
-    padding-left: $menu-width_closed;
     max-width: 95%;
     margin: auto;
-    margin-top: 2%;
-    margin-bottom: 2%;
+    padding-top: 50px;
+    padding-bottom: 50px;
 
     @include s-up {max-width: 92.5%;}
     @include m-up {max-width: 90%;}
@@ -17,7 +16,7 @@
 #main {
     width: 100%;
     text-align: justify;
-    padding-left: $menu-width_closed;
+    font-family: 'Montserrat', serif;
     max-width: 95%;
     margin: auto;
 
@@ -28,15 +27,30 @@
 }
 
 
+#footer {
+    height: $footer-height;
+    width: 100%;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    padding-top: 30px;
+}
+
 
 // TITLE TEXT STYLING
 
 #title span {
     font-family: 'Merriweather', serif;
-    font-size: 40px;
+    font-size: 20px;
+
+    @include s-up {font-size: 30px;}
+    @include m-up {font-size: 40px;}
+
+    word-wrap: break-word;
     color: $text_title;
     text-align: center;
     text-rendering: optimizeLegibility;
+    max-width: 100%;
 
 
     &.typing {
@@ -49,21 +63,21 @@
 }
 
 @keyframes "blink" {
-  from, to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: $text-title_cursor;
-  }
+    from, to {
+        border-color: transparent;
+    }
+    50% {
+        border-color: $text-title_cursor;
+    }
 }
 
 @-webkit-keyframes "blink" {
-  from, to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: $text-title_cursor;
-  }
+    from, to {
+        border-color: transparent;
+    }
+    50% {
+        border-color: $text-title_cursor;
+    }
 }
 
 
