--- a/agimpel_com/templates/main.html
+++ b/agimpel_com/templates/main.html
@@ -5,9 +5,9 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Test</title>
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<title>{{ title }} | agimpel.com</title>
+		<meta name="description" content="Homepage of Andreas Gimpel" />
+		<meta name="keywords" content="photography,travel,coding,blog,university" />
 		<meta name="author" content="Andreas Gimpel" />
 		<link rel="shortcut icon" href="{% static 'favicon.ico' %}">
 		<link rel="stylesheet" type="text/css" href="{% static 'css/all.css'%}" />
@@ -17,34 +17,20 @@
 	</head>
 	<body>
 		<div id="menu-container" class="menu-container">
-			<nav class="menu menu-effect" id="menu">
-				<h2 class="icon icon-lab">Sidebar</h2>
-				<div id="menu-trigger-effects" class="column">
-					<button data-effect="menu-effect" style="width:100%">Test</button>
-				</div>
-				<ul>
-					<li><a class="icon icon-data" href="#">Data Management</a></li>
-					<li><a class="icon icon-location" href="#">Location</a></li>
-					<li><a class="icon icon-study" href="#">Study</a></li>
-					<li><a class="icon icon-photo" href="#">Collections</a></li>
-					<li><a class="icon icon-wallet" href="#">Credits</a></li>
-				</ul>
-			</nav>
-
+			{% block menu %}
+				{% include 'menu.html' with menu_active='home' %}
+			{% endblock menu %}
 			<div class="content-pusher">
 				<div class="content">
 					<div class="content-inner">
-						<div id="title" class="main clearfix">
-							<span class="title_text" data-text="Landscape Photography"></span>
-							{% block content_title %}
-							{% endblock content_title %}
-						</div>
+						{% block content_title %}
+						{% endblock content_title %}
 						<div id="main" class="main clearfix">
                             {% block content_body %}
 							{% endblock content_body %}
-							Hier ist Text hier ist text hier ist text Hier ist Text hier ist text hier ist text Hier ist Text hier ist text hier ist text Hier ist Text hier ist text hier ist text Hier ist Text hier ist text hier ist text Hier ist Text hier ist text hier ist text Hier ist Text hier ist text hier ist text
 						</div>
 					</div>
+					<div id="footer">© Andreas Gimpel, {% now "Y" %}</div>
 				</div>
 			</div>
 		</div>
@@ -52,7 +38,7 @@
 		<script src="{% static 'js/classie.js' %}"></script>
         <script src="{% static 'js/sidebar_effects.js' %}"></script>
         <script src="{% static 'js/title.js' %}"></script>
-        {% block add_js %}
-        {% endblock add_js %}
+        {% block add_foot %}
+        {% endblock add_foot %}
 	</body>
 </html>
