--- a/agimpel_com/static/css/all.scss
+++ b/agimpel_com/static/css/all.scss
@@ -11,7 +11,7 @@ $navbar-height: 50px; //height of navbar in mobile design
 $footer-height: 60px;
 
 $content-1: rgba(45, 45, 45, 1);
-$content-2: rgba(229,107,46,1);
+$content-2: #EDB88B;
 $content-3: rgba(86,171,214,1);
 $content-bg: rgba(231, 229, 228, 1);
 $content-zoomout-bg: rgba(231, 229, 228, 1);
