--- a/agimpel_com/templates/menu.html
+++ b/agimpel_com/templates/menu.html
@@ -1,8 +1,10 @@
 <nav class="menu menu-effect" id="menu">
-    <h2 class="icon icon-lab">{{ menu_active }}</h2>
-    <div id="menu-trigger-effects" class="column">
-        <button data-effect="menu-effect" style="width:100%">Test</button>
-    </div>
+    <div id="nav-icon" data-effect="menu-effect">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     <ul>
         <li><a class="icon icon-data" href="#">Data Management</a></li>
         <li><a class="icon icon-location" href="#">Location</a></li>
