--- a/agimpel_com/static/css/_menu.scss
+++ b/agimpel_com/static/css/_menu.scss
@@ -169,3 +169,90 @@
 .no-js .content-pusher {
 	padding-left: 300px;
 }
+
+
+
+
+
+
+
+
+// Menu hamburger animation
+
+
+#nav-icon {
+	width: 30px;
+	height: 30px;
+	position: relative;
+	display: block;
+	margin-left: auto; 
+	margin-right: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+	-webkit-transition: .5s ease-in-out;
+	-moz-transition: .5s ease-in-out;
+	-o-transition: .5s ease-in-out;
+	transition: .5s ease-in-out;
+	cursor: pointer;
+}
+  
+#nav-icon span {
+	display: block;
+	position: absolute;
+	height: 2px;
+	width: 100%;
+	background: $content-2;
+	border-radius: 2px;
+	opacity: 1;
+	left: 0;
+	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+	-webkit-transition: .25s ease-in-out;
+	-moz-transition: .25s ease-in-out;
+	-o-transition: .25s ease-in-out;
+	transition: .25s ease-in-out;
+}
+
+#nav-icon span:nth-child(1) {
+	top: 4px;
+  }
+  
+  #nav-icon span:nth-child(2), #nav-icon span:nth-child(3) {
+	top: 14px;
+  }
+  
+  #nav-icon span:nth-child(4) {
+	top: 24px;
+  }
+  
+  #nav-icon.open span:nth-child(1) {
+	top: 14px;
+	width: 0%;
+	left: 50%;
+  }
+  
+  #nav-icon.open span:nth-child(2) {
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	transform: rotate(45deg);
+  }
+  
+  #nav-icon.open span:nth-child(3) {
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+  }
+  
+  #nav-icon.open span:nth-child(4) {
+	top: 14px;
+	width: 0%;
+	left: 50%;
+  }
