--- a/apps/basic/templates/basic/index.html
+++ b/apps/basic/templates/basic/index.html
@@ -1,1 +1,18 @@
-This is my homepage
+{% extends 'main.html' %}
+
+{% block add_head %}
+{% endblock add_head %}
+
+{% block menu %}
+    {% include 'menu.html' with menu_active='' %}
+{% endblock menu %}
+
+{% block add_foot %}
+{% endblock add_foot %}
+
+{% block content_title %}
+    {% include 'large_heading.html' with title="Main" %}
+{% endblock content_title %}
+
+{% block content_body %}
+{% endblock content_body %}
