--- a/apps/gallery/static/gallery/css/_gallery.scss
+++ b/apps/gallery/static/gallery/css/_gallery.scss
@@ -1,4 +1,4 @@
-.image-gallery {
+.image-gallery.grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, 100px);
     grid-auto-rows: 100px;
@@ -28,5 +28,24 @@
                 height: 100%;
             }
         }
+    }
+}
+
+
+.image-gallery.single {
+    width: 100%;
+    height: auto;
+
+    figure {
+        width: 100%;
+        height: 100%;
+
+        a {
+            img {
+            width: 100%;
+            height: 100%;
+            }
+        }
+
     }
 }
