--- a/apps/gallery/templates/gallery/image.html
+++ b/apps/gallery/templates/gallery/image.html
@@ -1,3 +1,25 @@
-<p>Title: {{ image.title }}</p>
-<p>Description: {{ image.description }}</p>
-<img style="width:200px" src="{{ image.src.url }}">
+{% extends 'gallery/main.html' %}
+
+{% block content_title %}
+    {% include 'large_heading.html' with title=image.title %}
+{% endblock content_title %}
+
+{% block content_body %}
+
+{% if image %}
+    <div class="image-gallery single">
+        <figure>
+            <a href="{{ image.picture.url }}" data-size="{{ image.picture.width }}x{{ image.picture.height }}">
+                <img src="{{ image.picture.url }}" alt="{{ image.title }}" />
+            </a>
+            <figcaption>
+                <p class="image_title">{{ image.title }}</p>
+                <p class="image_exifinfo"><span>{{ image.exif_model }}</span><span>{{ image.exif_focallength }}</span><span>f/{{ image.exif_aperture }}</span><span>{{ image.exif_shutterspeed }} s</span><span>ISO {{ image.exif_iso }}</span></p>
+            </figcaption>
+        </figure>
+    </div>
+{% else %}
+    <p>No image is available.</p>
+{% endif %}
+
+{% endblock content_body %}
