--- a/agimpel_com/templates/main.html
+++ b/agimpel_com/templates/main.html
@@ -11,6 +11,7 @@
 		<meta name="author" content="Andreas Gimpel" />
 		<link rel="shortcut icon" href="{% static 'favicon.ico' %}">
 		<link rel="stylesheet" type="text/css" href="{% static 'css/all.css'%}" />
+		<link rel="stylesheet" type="text/css" href="{% static 'css/fontawesome.css'%}" />
         <script src="{% static 'js/modernizr.js' %}"></script>
         {% block add_head %}
         {% endblock add_head %}
@@ -37,7 +38,8 @@
 		<script src="{% static 'js/jquery.js' %}"></script>
 		<script src="{% static 'js/classie.js' %}"></script>
         <script src="{% static 'js/sidebar_effects.js' %}"></script>
-        <script src="{% static 'js/title.js' %}"></script>
+		<script src="{% static 'js/title.js' %}"></script>
+		<script src="{% static 'js/slidein_effects.js' %}"></script>
         {% block add_foot %}
         {% endblock add_foot %}
 	</body>
