--- a/apps/gallery/templates/gallery/main.html
+++ b/apps/gallery/templates/gallery/main.html
@@ -8,7 +8,7 @@
 {% endblock add_head %}
 
 {% block menu %}
-    {% include 'menu.html' with menu_active='gallery' %}
+    {% include 'menu.html' with menu_active='gallery' menu_title='gallery' %}
 {% endblock menu %}
 
 {% block add_foot %}
