--- a/agimpel_com/templates/main.html
+++ b/agimpel_com/templates/main.html
@@ -9,7 +9,15 @@
 		<meta name="description" content="Homepage of Andreas Gimpel" />
 		<meta name="keywords" content="photography,travel,coding,blog,university" />
 		<meta name="author" content="Andreas Gimpel" />
-		<link rel="shortcut icon" href="{% static 'favicon.ico' %}">
+		<link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png'%}">
+		<link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png'%}">
+		<link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png'%}">
+		<link rel="manifest" href="{% static 'img/favicon/site.webmanifest'%}">
+		<link rel="mask-icon" href="{% static 'img/favicon/safari-pinned-tab.svg'%}" color="#edb88b">
+		<link rel="shortcut icon" href="{% static 'img/favicon/favicon.ico'%}">
+		<meta name="msapplication-TileColor" content="#edb88b">
+		<meta name="msapplication-config" content="{% static 'img/favicon/browserconfig.xml'%}">
+		<meta name="theme-color" content="#edb88b">
 		<link rel="stylesheet" type="text/css" href="{% static 'css/all.css'%}" />
 		<link rel="stylesheet" type="text/css" href="{% static 'css/fontawesome.css'%}" />
         <script src="{% static 'js/modernizr.js' %}"></script>
