--- a/agimpel_com/static/css/_general.scss
+++ b/agimpel_com/static/css/_general.scss
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: opensans;
+    font-family: 'Montserrat';
+    color: inherit;
 }
 
 html, body {
@@ -18,5 +19,37 @@ a {
 
     &:hover {
         text-decoration: underline;
+    }
+}
+
+.hide-hm {
+    visibility: hidden;
+
+    @include mh-up {
+        visibility: visible;
+    }
+}
+
+.show-hm {
+    visibility: visible;
+
+    @include mh-up {
+        visibility: hidden;
+    }
+}
+
+.hide-hs {
+    visibility: hidden;
+
+    @include sh-up {
+        visibility: visible;
+    }
+}
+
+.show-hs {
+    visibility: visible;
+
+    @include sh-up {
+        visibility: hidden;
     }
 }
