--- a/agimpel_com/static/css/_fonts.scss
+++ b/agimpel_com/static/css/_fonts.scss
@@ -1,2 +1,2 @@
 @import url('https://fonts.googleapis.com/css?family=Merriweather&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400&display=swap');
