--- a/agimpel_com/static/css/all.scss
+++ b/agimpel_com/static/css/all.scss
@@ -19,9 +19,9 @@ $content-zoomout-bg: rgba(231, 229, 228, 1);
 
 $menu-bg: rgba(45, 45, 45, 1);
 $content-zoomout-bg: $content-bg;
-$zoomout-bg: rgba(51, 51, 51, 1);
+$zoomout-bg: rgba(70, 70, 70, 1);
 
-$text-white: white;
+$text-white: rgba(231, 229, 228, 1);
 $text-white_alt: rgba(255, 255, 255, 0.5);
 $text-title: black;
 $text: rgba(0, 0, 0, 1);
