--- a/apps/gallery/static/gallery/css/_image_caption.scss
+++ b/apps/gallery/static/gallery/css/_image_caption.scss
@@ -1,25 +1,66 @@
-.image_title {
-    font-family: 'Montserrat', serif;
-    font-size: 18px;
-    padding-bottom: 4px;
-    font-weight: normal;
-}
-
-.image_exifinfo {
-    width: 100%;
-    display: inline-flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    span {
-        font-family: 'Montserrat', sans-serif;
+.pswp__caption__center {
+    
+    .image_title {
+        font-family: 'Montserrat', serif;
+        font-size: 18px;
+        padding-bottom: 4px;
         font-weight: normal;
+    }
+
+    .image_exifinfo {
+        width: 100%;
+        display: inline-flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        span {
+            font-family: 'Montserrat', sans-serif;
+            font-weight: normal;
+        }
+    }
+
+    .image_more {
+        a {
+            text-decoration: underline;
+            font-family: 'Montserrat', serif;
+            font-weight: normal;
+        }
     }
 }
 
-.image_more {
-    a {
-        text-decoration: underline;
+.single {
+    
+    .image_title {
+        font-family: 'Montserrat', serif;
+        font-size: 24px;
+        padding-bottom: 2px;
+        font-weight: normal;
+    }
+
+    .image_exifinfo {
+        span {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 10pt;
+            font-weight: normal;
+            line-height: 1.35;
+            padding-right: .75em;
+
+            &:nth-child(1) {
+                display: block;
+                @include s-up {
+                    display: inline;
+                }
+            }
+
+            
+        }
+    }
+
+    .image_description {
         font-family: 'Montserrat', serif;
         font-weight: normal;
+
+        a {
+            text-decoration: underline;
+        }
     }
 }
