--- a/apps/gallery/templates/gallery/image.html
+++ b/apps/gallery/templates/gallery/image.html
@@ -1,10 +1,8 @@
 {% extends 'gallery/main.html' %}
 
-{% block content_title %}
-    {% include 'large_heading.html' with title=image.title %}
-{% endblock content_title %}
-
 {% block content_body %}
+
+<div class="spacer small"></div>
 
 {% if image %}
     <div class="image-gallery single">
@@ -12,12 +10,17 @@
             <a href="{{ image.picture.url }}" data-size="{{ image.picture.width }}x{{ image.picture.height }}">
                 <img src="{{ image.picture.url }}" alt="{{ image.title }}" />
             </a>
-            <figcaption>
-                <p class="image_title">{{ image.title }}</p>
-                <p class="image_exifinfo"><span>{{ image.exif_model }}</span><span>{{ image.exif_focallength }}</span><span>f/{{ image.exif_aperture }}</span><span>{{ image.exif_shutterspeed }} s</span><span>ISO {{ image.exif_iso }}</span></p>
-            </figcaption>
         </figure>
     </div>
+    <div class="spacer small"></div>
+    <figcaption class="single">
+        <p class="image_title">{{ image.title }}</p>
+        <p class="image_exifinfo"><span>{{ image.exif_model }}</span><span>{{ image.exif_focallength }}</span><span>f/{{ image.exif_aperture }}</span><span>{{ image.exif_shutterspeed }} s</span><span>ISO {{ image.exif_iso }}</span></p>
+        {% if image.description %}
+        <br>
+        <p class="image_description">{{ image.description|safe }}</p>
+        {% endif %}
+    </figcaption>
 {% else %}
     <p>No image is available.</p>
 {% endif %}
