--- a/apps/gallery/templates/gallery/main.html
+++ b/apps/gallery/templates/gallery/main.html
@@ -17,4 +17,5 @@
     <script src="{% static 'gallery/js/photoswipe.min.js' %}"></script> 
     <script src="{% static 'gallery/js/photoswipe-ui-default.min.js' %}"></script>
     <script src="{% static 'gallery/js/photoswipe_gallery.js' %}"></script>  
+    <script src="{% static 'gallery/js/gallery.js' %}"></script>  
 {% endblock add_foot %}
